Archive2/9a/366e2c9efcba16/main.cpp
#include <iostream>


void f(char const *const p) {
 std::cout << "hello" << std::endl;   
}
int f(char const *p) {
 std::cout << "world" << std::endl;   
 return 0;
}

int main()
{
    
}
